[package]
authors = ["Alec Embke <aembke@gmail.com>"]
categories = []
documentation = "http://azuqua.github.io/spork.rs"
keywords = ["cpu", "memory", "usage"]
license = "MIT"
name = "spork"
readme = "README.md"
repository = "https://github.com/azuqua/spork.rs"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.23"
kernel32-sys = "0.2"
libc = "0.2"
psapi-sys = "0.1"
sys-info = "0.9.1"
thread-id = "3.0"
winapi = "0.2"
num_cpus = "1.15"

[dev-dependencies]
rand = "0.8.5"

[features]
compile_unimplemented = []
default = []

[lib]
doctest = false
