[package]
authors = ["Alec Embke <aembke@gmail.com>"]
categories = []
documentation = "http://azuqua.github.io/spork.rs"
keywords = ["cpu", "memory", "usage"]
license = "MIT"
name = "spork"
readme = "README.md"
repository = "https://github.com/azuqua/spork.rs"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4"
libc = "0.2"
sys-info = "0.9"
thread-id = "4.1"
num_cpus = "1.15"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
]

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies.apple-sys]
version = "0.2.0"
features = [
    "IOKit"
]

[dev-dependencies]
rand = "0.8.5"

[features]
compile_unimplemented = []
default = []

[lib]
doctest = false
